panko-compiletest/src/snapshots/panko_compiletest__scope-panko__tests__cases__decl_in_global_scope__test_duplicate_parameter_name_in_function_declaration.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/decl_in_global_scope/test_duplicate_parameter_name_in_function_declaration.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: duplicate definition for `x`
   ╭─[panko/tests/cases/decl_in_global_scope/test_duplicate_parameter_name_in_function_declaration.c:1:18]
   │
 1 │ int f(int x, int x);
   │           ┬      ┬  
   │           │      ╰── duplicate definition
   │           │         
   │           ╰───────── previously defined here
───╯
