panko-compiletest/src/snapshots/panko_compiletest__scope-panko__tests__cases__decl_in_global_scope__test_tentative_definitions_with_declaration.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/decl_in_global_scope/test_tentative_definitions_with_declaration.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (tentative-definition value~0 `int` ∅)
   (definition value~0 `int` 42)
   (tentative-definition value~0 `int` ∅))

----- stderr -----
